--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,7 +35,7 @@
 </nav>
 
 
-<div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+<div id="carouselExampleIndicators" class="carousel slide" data-ride=" responsive carousel">
     <ol class="carousel-indicators">
         <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
         <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
@@ -43,7 +43,7 @@
     </ol>
     <div class="carousel-inner">
         <div class="carousel-item active">
-            <img src="https://cdn.slashgear.com/wp-content/uploads/2019/07/coffee_main_envat-1280x720.jpg" class="d-block w-800" alt="...">
+            <img src="https://cdn.slashgear.com/wp-content/uploads/2019/07/coffee_main_envat-1280x720.jpg" class="d-block w-100" alt="...">
         </div>
         <div class="carousel-item">
             <img src="https://cdn.cnn.com/cnnnext/dam/assets/181127101933-health-of-coffee-exlarge-169.jpg" class="d-block w-100" alt="...">
